cmake_minimum_required(VERSION 3.0)

set(CPACK_PACKAGE_NAME "testo-guest-additions")
set(CPACK_PACKAGE_VERSION "${TESTO_VERSION}")

install(TARGETS testo-guest-additions
	DESTINATION /usr/sbin
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(FILES
	${CMAKE_CURRENT_SOURCE_DIR}/etc/init.d/testo-guest-additions
	DESTINATION /etc/init.d
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

set(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST
	/usr
	/usr/sbin
	/etc
	/etc/init.d
)

set(CPACK_RPM_POST_INSTALL_SCRIPT_FILE ${CMAKE_CURRENT_SOURCE_DIR}/postinst)
set(CPACK_RPM_PRE_UNINSTALL_SCRIPT_FILE ${CMAKE_CURRENT_SOURCE_DIR}/prerm)
set(CPACK_RPM_POST_UNINSTALL_SCRIPT_FILE ${CMAKE_CURRENT_SOURCE_DIR}/postrm)

set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA
"${CMAKE_CURRENT_SOURCE_DIR}/postinst;\
${CMAKE_CURRENT_SOURCE_DIR}/prerm;\
${CMAKE_CURRENT_SOURCE_DIR}/postrm;")

add_package(testo-guest-additions-package)
add_dependencies(testo-guest-additions-package testo-guest-additions)
